syntax = "proto3";

package com.example;

service PredictionService {
  rpc ImagePrediction (ImageData) returns (CategoricalResult);
}

message ImageData {
  string data = 1;
}

message TextData { 
  repeated string data = 1;
}

message CategoricalResult {
  string result = 1;
}

message GeneratedTextResult {
  repeated string result = 1;
}

message GeneratedImageResult {
  string result = 1;
}